--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,10 +96,16 @@ h5 {
       #container #works-block section .info {
         padding: 16px; }
         #container #works-block section .info h3 {
-          font-weight: bold;
+          font-size: 14px;
+          font-weight: normal;
           line-height: 20px;
           height: 40px;
           margin-bottom: 8px; }
+        #container #works-block section .info p {
+          font-size: 14px;
+          margin-bottom: 8px; }
+          #container #works-block section .info p a {
+            font-size: 14px; }
         #container #works-block section .info .date {
           font-size: 14px;
           color: #aaa; }
