--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,15 +85,26 @@ h5 {
       @media screen and (min-width: 900px) {
         #container #works-block section {
           width: calc((100% / 3) - 16px); } }
-      #container #works-block section .image {
+      #container #works-block section .image-wrapper {
+        position: relative;
         width: 100%;
-        height: 140px;
         border: 2px solid #fefefe;
-        border-radius: 2px;
-        background-color: #aaa;
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover; }
+        border-radius: 2px; }
+        #container #works-block section .image-wrapper:before {
+          content: "";
+          display: block;
+          padding-top: 52.5%; }
+        #container #works-block section .image-wrapper .image {
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
+          border-radius: 2px;
+          background-color: #aaa;
+          background-position: center center;
+          background-repeat: no-repeat;
+          background-size: cover; }
       #container #works-block section .info {
         padding: 16px; }
         #container #works-block section .info h3 {
