--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -137,15 +137,30 @@ h5 {
         width: calc((100% / 3) - 16px);
       }
 
-      .image {
+      .image-wrapper {
+        position: relative;
         width: 100%;
-        height: 140px;
         border: 2px solid #fefefe;
         border-radius: 2px;
-        background-color: #aaa;
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-size: cover;
+
+        &:before {
+          content:"";
+          display: block;
+          padding-top: 52.5%;
+        }
+
+        .image {
+          position: absolute;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          right: 0;
+          border-radius: 2px;
+          background-color: #aaa;
+          background-position: center center;
+          background-repeat: no-repeat;
+          background-size: cover;
+        }
       }
 
       .info {
