--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,10 @@
-@font-face {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local("Roboto"), local("Roboto-Regular"), url(https://fonts.gstatic.com/s/roboto/v18/KFOmCnqEu92Fr1Mu4mxKKTU1Kg.woff2) format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
 /*-----------------------------------------------------------------------------
 * Common
 -----------------------------------------------------------------------------*/
 * {
   padding: 0;
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
   font-size: 15px;
   letter-spacing: 0.04em;
   color: #333;
@@ -47,7 +40,8 @@ h5 {
     margin-bottom: 32px; }
     #container #title-block h1 {
       font-size: 20px;
-      color: #333; }
+      color: #333;
+      text-align: center; }
   #container #contents-block section {
     background-color: #fefefe;
     border-radius: 2px;
